Fix upload alignment with Chrome, fixes #623

--- a/src/resources-packaged/xbl/fb/permissions/permissions.css
+++ b/src/resources-packaged/xbl/fb/permissions/permissions.css
@@ -1165,6 +1165,12 @@ form.xforms-form .uneditable-input {
   box-sizing: border-box;
   height: 28px;
 }
+form.xforms-form input[type="file"] {
+  line-height: normal;
+}
+form.xforms-form textarea {
+  height: 68px;
+}
 form.xforms-form .pagination ul > li > .xforms-trigger {
   cursor: pointer;
 }
